# MSc_thesis_multiagent_research

./: .env.example  .gitignore  Dockerfile  ETHICS.md  LICENSE  README.md  pyproject.toml  remediate.py  requirements.txt  run.bat  run_baseline.py
.github/workflows/: remediate.yml
devsecagent/: __init__.py  arm_a.py  config.py  dataset.py  deployer.py  kb.py  llm.py  patcher.py  retriever.py  scan.py  schema.py  versions.py
devsecagent/data/: cve_kb.json
samples/vuln_python/: requirements.txt
tests/: test_deployer.py  test_llm.py  test_patcher.py  test_retriever.py  test_scan.py
